fix: remove overflow:hidden from slider track that was clipping the thumb

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -302,7 +302,6 @@ input[type="range"] {
 input[type="range"]::-webkit-slider-runnable-track {
   height: 4px;
   border-radius: 99px;
-  overflow: hidden;
 }
 input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
